--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,14 @@ spring:
   freemarker:
     cache: false
   thymeleaf:
+    prefix: classpath:templates/
+    check-template-location: true
+    suffix: .html
+    mode: HTML5
     cache: false
+  mvc:
+    static-path-pattern: /static/**
+
 
   datasource:
     url: jdbc:h2:tcp://localhost/~/bookreport
@@ -15,7 +22,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      #ddl-auto: create
     properties:
       hibernate:
         #        show_sql: true
